// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`printRootHelp renders the bare root help snapshot 1`] = `
"Usage: docs [options] [command]

# docs
docs organizes project local and global documentation optimized for information quality.

## Overview & Organization
- All topics & docs are kept in and organized in \`docs\` directories
- \`docs\` includes project documentation, notes, etc. It also includes global machine documentation, flows, patterns, available tools, etc.
- \`docs/topics\` includes larger organized sets of documentation within the given topic - useful to keep \`docs\` lean.
- \`query\` indexes everything in global \`docs/**\` for lookup when quick scan with \`ls\` and \`topic\` doesn't include promising results at a glance. \`query\` doesn't index project docs directory.

## Query
docs query [--limit <n>] <query...> | status

Use this to search through parked global docs collections with semantic search fast.
Returns matches optimized for quick context gathering with cat/sed followups.

## Parking
docs park <name> [path]

Use this to attach a docs root to the global docs index.
\`docs park foo\` - park \`./docs\` when present, otherwise \`.\`
\`docs park foo ~/work/bar\` - park an explicit project or docs dir

## Topics
docs topic [topic] [section]

Topics contain specialized docs, available anywhere.
Use \`docs topic <name>\` to expand available docs for topic.
\`docs topic foo\` - view foo about/index first
\`docs topic foo bar\` - learn about bar section

TOPIC  TITLE        DESCRIPTION
ios    iOS Library  Apple-platform docs
ops    Ops Notes    This summary is intentionally longer than sixty-four characte...
qmd    QMD          local search docs

## Docs
docs ls [where]
docs ls . - Project docs, expanded descriptions
docs ls ./docs/subdir - Project docs in dir
docs ls docs/subdir - Matching local and global docs dirs
docs ls global - Global docs, expanded descriptions

/fixture/home/.ngents/docs/architecture
  global-only.md - global architecture notes

/fixture/home/.ngents/docs/browser
  cdp.md - Chrome CDP instructions

/fixture/home/.ngents/docs/ngents
  docs.md - command index

/fixture/home/.ngents/docs/process
  qa.md - qa process notes

/fixture/repo/docs
  long-summary.md - This summary is intentionally longer than sixty-four characte...
  web-fetching.md - web browser tools

/fixture/repo/docs/architecture
  local-only.md - local architecture notes
  main.md - read this first
"
`;

exports[`printRootHelp renders the help-only root help snapshot 1`] = `
"Usage: docs [options] [command]

# docs
docs organizes project local and global documentation optimized for information quality.

## Overview & Organization
- All topics & docs are kept in and organized in \`docs\` directories
- \`docs\` includes project documentation, notes, etc. It also includes global machine documentation, flows, patterns, available tools, etc.
- \`docs/topics\` includes larger organized sets of documentation within the given topic - useful to keep \`docs\` lean.
- \`query\` indexes everything in global \`docs/**\` for lookup when quick scan with \`ls\` and \`topic\` doesn't include promising results at a glance. \`query\` doesn't index project docs directory.

## Query
docs query [--limit <n>] <query...> | status

Use this to search through parked global docs collections with semantic search fast.
Returns matches optimized for quick context gathering with cat/sed followups.

## Parking
docs park <name> [path]

Use this to attach a docs root to the global docs index.
\`docs park foo\` - park \`./docs\` when present, otherwise \`.\`
\`docs park foo ~/work/bar\` - park an explicit project or docs dir

## Topics
docs topic [topic] [section]

Topics contain specialized docs, available anywhere.
Use \`docs topic <name>\` to expand available docs for topic.
\`docs topic foo\` - view foo about/index first
\`docs topic foo bar\` - learn about bar section

TOPIC  TITLE        DESCRIPTION
ios    iOS Library  Apple-platform docs
ops    Ops Notes    This summary is intentionally longer than sixty-four characte...
qmd    QMD          local search docs
"
`;
